--- a/demo_layout/docker-compose.yml
+++ b/demo_layout/docker-compose.yml
@@ -9,17 +9,18 @@
 # 作者: 应卓
 # 日期: 2016-09-17
 ########################################################################################################################
-
 discovery:
-  mem_limit: 1000000000
-  image: syuukawa/microservice-discovery:latest
+  mem_limit:
+    1000000000
+  image:
+    syuukawa/microservice-discovery:latest
   ports:
     - 8761:8761
   volumes:
     - /tmp:/tmp
   environment:
-#    - SPRING_PROFILES_ACTIVE=docker
     - JAVA_OPTS="-Xms5000m -Xmx10000m"
+    #    - SPRING_PROFILES_ACTIVE=docker
   command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
 #
 #config-service:
