--- a/demo_layout/docker-compose.yml
+++ b/demo_layout/docker-compose.yml
@@ -1,8 +1,8 @@
 discovery:
   mem_limit:
-    1000000000
+    - 1000000000
   image:
-    syuukawa/microservice-discovery:latest
+    - syuukawa/microservice-discovery:latest
   ports:
     - 8761:8761
   volumes:
@@ -10,4 +10,4 @@ discovery:
   environment:
     - JAVA_OPTS="-Xms5000m -Xmx10000m"
   command:
-    bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
+    - bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
