--- a/demo_layout/pom.xml
+++ b/demo_layout/pom.xml
@@ -26,7 +26,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Camden.SR2</version>
+                <version>Brixton.SR6</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
