--- a/demo_layout/discovery/pom.xml
+++ b/demo_layout/discovery/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>discovery</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <start-class>com.syuukawa.cloud.DisApplication</start-class>
@@ -29,10 +30,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+
         <!-- springcloud -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <artifactId>spring-cloud-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
