--- a/demo_layout/docker-compose.yml
+++ b/demo_layout/docker-compose.yml
@@ -3,7 +3,7 @@ discovery:
  ports:
   - 8761:8761
  volumes:
-  - /tmp:/tmp
+  - /temp:/temp
  environment:
   - JAVA_OPTS="-Xms5000m -Xmx10000m"
  command: bash -c "java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
