--- a/demo_layout/discovery/src/main/docker/Dockerfile
+++ b/demo_layout/discovery/src/main/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM java:8
 VOLUME /tmp
 ADD discovery.jar app.jar
 RUN bash -c 'touch /app.jar'
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/app.jar"]
