--- a/demo_layout/discovery/pom.xml
+++ b/demo_layout/discovery/pom.xml
@@ -26,11 +26,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--<dependency>-->
+        <dependency>
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter-test</artifactId>-->
-        <!--</dependency>-->
-
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
         <!-- springcloud -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
