--- a/demo_layout/discovery/src/main/resources/application.properties
+++ b/demo_layout/discovery/src/main/resources/application.properties
@@ -36,16 +36,16 @@ eureka.server.response-cache-update-interval-ms=5000
 eureka.server.eviction-interval-timer-in-ms=5000
 
 # logging
-logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss.SSS,GMT+8}]%-5level %logger{72}[%L] - %msg%n
-logging.level.root=info
-logging.level.example=trace
-logging.level.org.springframework=info
-logging.level.com.netflix.discovery.InstanceInfoReplicator=error
-logging.level.com.netflix.discovery.DiscoveryClient=off
-logging.level.com.netflix.discovery.shared.transport.decorator.RetryableEurekaHttpClient=error
-logging.level.com.netflix.discovery.shared.transport.decorator.RedirectingEurekaHttpClient=off
+#logging.pattern.console=[%d{yyyy-MM-dd HH:mm:ss.SSS,GMT+8}]%-5level %logger{72}[%L] - %msg%n
+#logging.level.root=info
+#logging.level.example=trace
+#logging.level.org.springframework=info
+#logging.level.com.netflix.discovery.InstanceInfoReplicator=error
+#logging.level.com.netflix.discovery.DiscoveryClient=off
+#logging.level.com.netflix.discovery.shared.transport.decorator.RetryableEurekaHttpClient=error
+#logging.level.com.netflix.discovery.shared.transport.decorator.RedirectingEurekaHttpClient=off
 # endpoint - info
-info.application.name=${spring.application.name}
+#info.application.name=${spring.application.name}
 # security
 #management.security.enabled=false
 #management.security.roles=ADMIN
